<resources>
    <string name="app_name">Beegoing</string>

    <!--Strings for Login-->
    <string name="login_message_part1">KEEP CALM</string>
    <string name="login_message_part2">AND</string>
    <string name="login_message_part3">GO ON A TRIP</string>
    <string name="create_account_link">Don\'t have an account?</string>
    <string name="button_sign_in">Log in</string>
    <string name="email_hint">Email address</string>
    <string name="password_hint">Password</string>

    <!--Strings for Register-->
    <string name="registerTitle">Register a new account</string>
    <string name="givenName_hint">Given Name</string>
    <string name="familyName_hint">Family Name</string>
    <string name="cpf_hint">CPF</string>
    <string name="ask_cpf_link">Why do we ask for your CPF?</string>
    <string name="tooltip_cpf">Your cpf is important for us to validate that you are a real person, so then we can guarantee the opinions we take come from real word.</string>
    <string name="city_of_residence_hint">City of residence</string>
    <string name="cellphone_hint">Cellphone number</string>
    <string name="birthdate_hint">Birth Date</string>
    <string name="confirm_sign_up">Register</string>
    <string name="toast_error_required">Required field not filled!</string>
    <string name="registration_success">You are registered!</string>
    <string name="registration_error">An error has occurred!</string>

    <!--Strings for Main-->
    <string name="new_trip_button_text">New Trip</string>
    <string name="trips_menu_title">Trips</string>
    <string name="news_menu_title">News &amp; Promos</string>
    <string name="partners_menu_title">Partners</string>
    <string name="destinations_menu_title">Destinations</string>

    <!--Strings for Navigation Drawer-->
    <string name="nav_manage_trips_text">Manage your trips</string>
    <string name="nav_update_profile_text">See and update your profile</string>
    <string name="nav_meet_partners_text">Meet our partners</string>
    <string name="nav_search_destinations_text">Search destinations</string>
    <string name="nav_settings_text">Settings</string>
    <string name="nav_logout_text">Logout</string>

    <!--Strings for Register Trip-->
    <string name="registerTrip_title">Start a new trip</string>
    <string name="tripName_hint">Set a name for your trip</string>
    <string name="addTripButton_text">add</string>
    <string name="startDate_hint">Select start date</string>
    <string name="endDate_hint">Select end date</string>
    <string name="tripBudget_hint">Budget</string>

    <!--Strings for Edit Trip-->
    <string name="editTrip_title">Trip details</string>
    <string name="listTrip_title">Trips</string>
    <string name="edit_trip_button_hint">Tap to edit your trip details, as name, budget, dates and events.</string>
    <string name="add_trip_part_button">ADD PART</string>
    <string name="commit_changes_to_trip_part_button">CONFIRM EDIT</string>
    <string name="add_trip_part_button_hint">Tap to add a new part to your trip.</string>

    <string name="addTripPart_title">Add Part</string>
    <string name="editTripPart_title">Edit Part</string>
    <string name="destination_label">Destination: </string>
    <string name="arrival_date_label">Arriving on: </string>
    <string name="departure_date_label">Leaving on: </string>
    <string name="prep_items_label">Select preparation items:</string>
    <string name="prep_item_check_label">Preparation Item</string>

    <!--Strings for Preparation Items-->
    <string name="visa_prep_item_label">Visa</string>
    <string name="hosting_prep_item_label">Accommodation</string>
    <string name="transport_prep_item_label">Transfer / Transportation</string>
    <string name="luggage_prep_item_label">Luggage</string>
    <string name="flights_prep_item_label">Flight Tickets</string>
    <string name="restaurant_prep_item_label">Restaurant Reservation</string>

    <!--Strings for Events-->
    <string name="event_title">Events</string>
    <string name="addEvent_title">New Event</string>
    <string name="name_event_label">Name your event:</string>
    <string name="start_time_event_label">Starting at:</string>
    <string name="end_time_event_label">Ending at:</string>
    <string name="partner_event_label">Search partner:</string>
    <string name="category_event_label">Category:</string>
    <string name="cost_event_label">Cost:</string>
    <string name="category_spinner_default_label">Select a category</string>
    <string name="location_event_label">District/Location Reference:</string>
    <string name="observation_event_label">Don\'t forget:</string>
    <string name="provider_event_label">Place/Professional</string>
    <string name="date_event_label">Date:</string>
    <string name="add_event_label_button">ADD EVENT</string>
    <string name="edit_event_label_button">UPDATE EVENT</string>
    <string name="add_event_button_hint">Tap to add a event to your trip.</string>
    <string name="tooltip_event_partner">Use one of our suggested partners or type complete service provider name of your convenience.</string>
    <string name="understood">Got it!</string>
    <string name="editEvent_title">Edit Event</string>

    <!--Strings for Destination-->
    <string name="present_destination_title">Destinations</string>
    <string name="destination_detail_title">City Information</string>
    <string name="tourist_sites_label">Popular tourist spots:</string>
    <string name="new_trip_part_dest_button_text">Add to trip</string>
    <string name="add_city_to_trip_title">Choose a trip:</string>
    <string name="navbar_news_title">News\'n Promos</string>
    <string name="news_text">Seems like we don\'t have a promo for you now :(</string>
    <string name="news_text2">But come again soon to hear from our astonishing campaigns!</string>

    <!--Strings for Partners-->
    <string name="navbar_partners_title">Partners</string>
</resources>
