<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activities.AddEventActivity">
    <FrameLayout
        android:id="@+id/navBarEventAdd"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/navBarEventAddTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="15dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:text="@string/addEvent_title"/>
    </FrameLayout>

    <ScrollView
        android:id="@+id/add_event_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_event_label"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryText"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="text"
                android:textColor="@color/colorPrimaryText"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_event_label"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryText"/>
            <LinearLayout
                android:id="@+id/dateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <ImageButton
                    android:id="@+id/event_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_datepicker"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:focusable="true" />
                <TextView
                    android:id="@+id/event_date_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_time_event_label"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryText"/>
            <LinearLayout
                android:id="@+id/startTimeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <ImageButton
                    android:id="@+id/event_start_time_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cclock"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:focusable="true" />
                <TextView
                    android:id="@+id/event_start_time_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_time_event_label"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryText"/>
            <LinearLayout
                android:id="@+id/endTimeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <ImageButton
                    android:id="@+id/event_end_time_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cclock"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:focusable="true" />
                <TextView
                    android:id="@+id/event_end_time_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/provider_event_label"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryText"/>
            <AutoCompleteTextView
                android:id="@+id/partnerSearchBar"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
            <Button
                android:id="@+id/addTripPartButton"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:text="@string/add_event_label_button"
                android:contentDescription="@string/add_event_button_hint"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>