<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activities.PresentNewsPromoActivity">

    <FrameLayout
        android:id="@+id/navBarTripAdd"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/navBarNewsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="15dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:text="@string/navbar_news_title"/>
    </FrameLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_megaphone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="OOPS!"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        android:textColor="@color/colorSecondaryText"
        android:textSize="16sp"
        android:text="@string/news_text"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:text="@string/news_text2"
        android:textAlignment="center"/>
</LinearLayout>